Fix weather results not showing on desktop version

--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,12 @@ html,
 	align-items: center;
 	border-radius: 5px;
 }
+#iconDiv,
+#tempDiv,
+#conditionDiv {
+	max-width: fit-content;
+}
+
 #trendingTitle {
 	text-align: center;
 	font-size: 22px;
@@ -196,16 +202,13 @@ html,
 .conditionClass {
 	margin-top: 8px;
 	margin-left: 5px;
-	min-width: 120px;
 }
 .iconClass {
 	background-color: white;
 	height: 40px;
-	width: 40px;
 }
 
 /* Central weather div (for mobiles/tablets) */
-
 /* Trending */
 .trendingImage {
 	width: 100%;
@@ -257,9 +260,7 @@ html,
 		margin-bottom: 0;
 	}
 
-	#rightDiv,
-	#weatherSchR,
-	#weatherResults {
+	#rightDiv {
 		display: none;
 	}
 
